--- a/.github/workflows/build-apk-readest.yml
+++ b/.github/workflows/build-apk-readest.yml
@@ -58,7 +58,7 @@ jobs:
           node-version: 22
 
       - name: Setup pnpm
-        uses: pnpm/action-setup@main
+        uses: pnpm/action-setup@master
         with:
           version: 10
 
@@ -68,7 +68,7 @@ jobs:
           targets: aarch64-linux-android
 
       - name: Rust cache
-        uses: Swatinem/rust-cache@main
+        uses: Swatinem/rust-cache@master
         with:
           key: android-arm64-cargo
           working-directory: readest_source
