--- a/.github/workflows/build-apk-readest.yml
+++ b/.github/workflows/build-apk-readest.yml
@@ -49,11 +49,31 @@ jobs:
           java-version: "${{ env.JDK_VERSION }}"
           distribution: "temurin"
 
-      - name: Setup android sdk
-        uses: zxgv5/setup-android@main
-
-      - name: Install ndk
-        run: sdkmanager "ndk;${{ env.NDK_VERSION }}"
+      # 手动安装 Android SDK 和 NDK（避免依赖系统预装版本）
+      - name: Manual install Android SDK and NDK
+        run: |
+          export ANDROID_HOME=$HOME/android-sdk
+          export NDK_VERSION="${{ env.NDK_VERSION }}"
+          mkdir -p ${ANDROID_HOME}
+          cd ${ANDROID_HOME}
+          wget -q https://dl.google.com/android/repository/commandlinetools-linux-11391160_latest.zip
+          unzip -q commandlinetools-linux-*.zip
+          rm commandlinetools-linux-*.zip
+          mkdir -p latest
+          mv cmdline-tools/* latest/
+          mv latest cmdline-tools/
+          export PATH=${ANDROID_HOME}/cmdline-tools/latest/bin:${ANDROID_HOME}/platform-tools:${PATH}
+          echo "ANDROID_HOME=${ANDROID_HOME}" >> $GITHUB_ENV
+          echo "${ANDROID_HOME}/cmdline-tools/latest/bin" >> $GITHUB_PATH
+          echo "${ANDROID_HOME}/platform-tools" >> $GITHUB_PATH
+          yes | sdkmanager --licenses > /dev/null 2>&1 || true
+          sdkmanager "platform-tools" \
+                     "platforms;android-${{ env.ANDROID_COMPILE_SDK }}" \
+                     "build-tools;${{ env.ANDROID_BUILD_TOOLS }}" \
+                     "ndk;${NDK_VERSION}"
+          # 设置 NDK 相关环境变量，确保 Tauri 使用我们安装的版本
+          echo "NDK_HOME=${ANDROID_HOME}/ndk/${NDK_VERSION}" >> $GITHUB_ENV
+          echo "ANDROID_NDK_HOME=${ANDROID_HOME}/ndk/${NDK_VERSION}" >> $GITHUB_ENV
 
       - name: Setup node.js
         uses: actions/setup-node@main
@@ -108,9 +128,12 @@ jobs:
           ANDROID_KEY_ALIAS: ${{ secrets.KEY_ALIAS }}
           ANDROID_KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
         run: |
-          # 初始化 Android 项目（如果不存在）
-          if [ ! -d "src-tauri/gen/android" ]; then
-            pnpm tauri android init
+          # 强制重新初始化 Android 项目（确保干净）
+          rm -rf src-tauri/gen/android
+          pnpm tauri android init
+          if [ $? -ne 0 ]; then
+            echo "❌ tauri android init failed"
+            exit 1
           fi
           # 写入 keystore.properties
           pushd src-tauri/gen/android
@@ -127,7 +150,8 @@ jobs:
       - name: Build android arm64 apk
         working-directory: ./readest_source/apps/readest-app
         env:
-          NDK_HOME: ${{ env.ANDROID_HOME }}/ndk/${{ env.NDK_VERSION }}
+          NDK_HOME: ${{ env.NDK_HOME }}
+          ANDROID_NDK_HOME: ${{ env.NDK_HOME }}
         run: |
           pnpm tauri android build -t aarch64
 
@@ -141,7 +165,6 @@ jobs:
       - name: Erase keystore, encrypt package and create release
         uses: ./ci_source/.github/actions/erase_aes256pac_release/
         with:
-          # 文件路径为基于github.workspace的绝对路径
           P12_KEYSTORE_PATH: "./readest_source/keystore.p12"
           ZIP_AES256_PWD: ${{ secrets.ZIP_AES256_PWD }}
           BUILD_ARTIFACT_PATH: "./dist/readest-${{ env.BUILD_DATE }}.apk"
