--- a/.github/workflows/build-apk-readest.yml
+++ b/.github/workflows/build-apk-readest.yml
@@ -49,8 +49,8 @@ jobs:
           java-version: "${{ env.JDK_VERSION }}"
           distribution: "temurin"
 
-      # 手动安装 Android SDK 和 NDK（避免依赖系统预装版本）
-      - name: Manual install Android SDK and NDK
+      # 手动安装 Android SDK 和 NDK，并统一环境变量
+      - name: Manual install android sdk and ndk
         run: |
           export ANDROID_HOME=$HOME/android-sdk
           export NDK_VERSION="${{ env.NDK_VERSION }}"
@@ -64,6 +64,8 @@ jobs:
           mv latest cmdline-tools/
           export PATH=${ANDROID_HOME}/cmdline-tools/latest/bin:${ANDROID_HOME}/platform-tools:${PATH}
           echo "ANDROID_HOME=${ANDROID_HOME}" >> $GITHUB_ENV
+          # 将 ANDROID_SDK_ROOT 设置为相同路径，避免冲突
+          echo "ANDROID_SDK_ROOT=${ANDROID_HOME}" >> $GITHUB_ENV
           echo "${ANDROID_HOME}/cmdline-tools/latest/bin" >> $GITHUB_PATH
           echo "${ANDROID_HOME}/platform-tools" >> $GITHUB_PATH
           yes | sdkmanager --licenses > /dev/null 2>&1 || true
@@ -96,6 +98,14 @@ jobs:
         with:
           key: android-arm64-cargo
           working-directory: readest_source
+
+      # 检查环境变量（调试用）
+      - name: Check environment variables
+        run: |
+          echo "ANDROID_HOME=$ANDROID_HOME"
+          echo "ANDROID_SDK_ROOT=$ANDROID_SDK_ROOT"
+          echo "NDK_HOME=$NDK_HOME"
+          echo "ANDROID_NDK_HOME=$ANDROID_NDK_HOME"
 
       - name: Install pnpm dependencies
         working-directory: ./readest_source
