--- a/.github/workflows/build-apk-readest.yml
+++ b/.github/workflows/build-apk-readest.yml
@@ -144,10 +144,10 @@ jobs:
           # 写入 keystore.properties
           pushd ${ANDROID_PROJECT_DIR}
           cat > keystore.properties << EOF
-          keyAlias=${ env.ANDROID_KEY_ALIAS }
-          keyPassword=${ env.ANDROID_KEY_PASSWORD }
+          keyAlias=${ ANDROID_KEY_ALIAS }
+          keyPassword=${ ANDROID_KEY_PASSWORD }
           storeFile=${{ github.workspace }}/readest_source/keystore.p12
-          storePassword=${ env.ANDROID_KEY_PASSWORD }
+          storePassword=${ ANDROID_KEY_PASSWORD }
           EOF
           echo "keystore.properties content:"
           cat keystore.properties
