--- a/.github/workflows/build-apk-anx-reader.yml
+++ b/.github/workflows/build-apk-anx-reader.yml
@@ -54,7 +54,7 @@ jobs:
         working-directory: ./anx_reader_source
         run: |
           flutter --version
-          flutter pub get
+          flutter pub upgrade --major-versions
  
       - name: Setup java
         uses: actions/setup-java@main
