--- a/.github/workflows/build-apk-anx-reader.yml
+++ b/.github/workflows/build-apk-anx-reader.yml
@@ -49,7 +49,19 @@ jobs:
         with:
           channel: stable
           flutter-version: ${{ env.FLUTTER_VERSION }}
- 
+
+      - name: Patch pubspec.yaml
+        working-directory: ./anx_reader_source
+        run: |
+          cat << 'EOF' >> pubspec.yaml
+          dependency_overrides:
+            riverpod: 2.6.1
+            flutter_riverpod: 2.6.1
+            riverpod_annotation: 2.6.1
+            archive: 3.6.1
+            csv: 5.0.13
+          EOF
+
       - name: Get flutter dependencies
         working-directory: ./anx_reader_source
         run: |
