--- a/.github/workflows/build-apk-anx-reader.yml
+++ b/.github/workflows/build-apk-anx-reader.yml
@@ -60,6 +60,8 @@ jobs:
             riverpod_annotation: 2.6.1
             riverpod_generator: 2.6.1
             riverpod_lint: 2.6.1
+            freezed_annotation: ^2.2.0
+            freezed: ^2.5.0          # 与 freezed_annotation 2.x 兼容
             archive: ^3.6.0
             csv: ^5.0.0
           EOF
