--- a/.github/workflows/build-apk-anx-reader.yml
+++ b/.github/workflows/build-apk-anx-reader.yml
@@ -55,11 +55,11 @@ jobs:
         run: |
           cat << 'EOF' >> pubspec.yaml
           dependency_overrides:
-            riverpod: 2.6.5
-            flutter_riverpod: 2.6.5
-            riverpod_annotation: 2.6.5
-            riverpod_generator: 2.6.5
-            riverpod_lint: 2.6.5
+            riverpod: ^2.6.0
+            flutter_riverpod: ^2.6.0
+            riverpod_annotation: ^2.6.0
+            riverpod_generator: ^2.6.0
+            riverpod_lint: ^2.6.0
             freezed_annotation: ^2.2.0
             freezed: ^2.5.0
             archive: ^3.6.0
